--- a/chris-portfolio/src/App.css
+++ b/chris-portfolio/src/App.css
@@ -12,6 +12,13 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+@media only screen and (max-width: 767px) {
+  .content-container {
+    max-width: 100%;
+    max-height: 100%;
+    overflow: scroll;
+  }
+}
 
 .App-header {
   background-color: #282c34;
@@ -43,6 +50,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   height: 100vh;
+  
 }
 
 .container {
@@ -50,4 +58,33 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
   background-color: transparent;
+  
+  
+}
+
+@media only screen and (max-width: 767px) {
+  .content-container {
+    max-width: 100%;
+    max-height: 100%;
+    overflow: scroll;
+    
+  }
+}
+
+.stitchmarked {
+  width: 80%;
+  height: 80%;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-top: 100px;
+}
+
+@media (max-width: 700px) {
+ .selected-project {
+   width: 90%;
+   height: 90%;
+ }
 }
